fix navbar spacing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -10,6 +10,7 @@ body {
     }
 
     .navbar-links {
+      height: 100%;
       padding: 0px 10px;
       display: flex;
       flex-direction: row;
